--- a/src/App.css
+++ b/src/App.css
@@ -106,8 +106,9 @@ body {
 
 @media screen and (max-width: 1200px) {
   .detail-image {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
   }
 
   .react-horizontal-scrolling-menu--scroll-container {
@@ -133,8 +134,13 @@ body {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 470px) {
   .exercise-card {
     width: 280px;
+  }
+
+  .detail-image {
+    width: 300px;
+    height: 300px;
   }
 }
